NetworkPolicy.yaml
##Create via https://editor.cilium.io/?id=U2XcNE5T8bZMgNUO

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shao-policy
  namespace: CMBU
spec:
  podSelector:
    matchLabels:
      app: frontend
      env: prod
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - ipBlock:
            cidr: 10.2.1.0/28
      ports:
        - port: 443
        - port: 80
    - from:
        - namespaceSelector:
            matchLabels:
              group: SFBU
            matchExpressions:
              - key: env
                operator: In
                values:
                  - prod
      ports:
        - port: 443
        - port: 80
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector:
            matchLabels:
              group: du
          podSelector:
            matchLabels:
              app: apigee
              env: prod
      ports:
        - port: 443
        - port: 80
    - to:
        - podSelector: {}
    - to:
        - ipBlock:
            cidr: 10.3.1.0/28
            except:
              - 10.3.1.15/32
      ports:
        - port: 443
        - port: 80
